--- a/dashboard/templates/dashboard/consumerDash.html
+++ b/dashboard/templates/dashboard/consumerDash.html
@@ -484,7 +484,7 @@
 
                 <!-- OPEN TRANSACTIONS -->
                 <div class="data-table-container">
-                    <h3>Open Transactions</h3>
+                    <h3>🔓 Open Transactions</h3>
                      {% if open_market_orders %}
                     <table class="data-table">
                         <thead>
@@ -527,7 +527,7 @@
 
                 <!-- HISTORY -->
                 <div class="data-table-container">
-                    <h3>Transaction History</h3>
+                    <h3>📜 Transaction History</h3>
                     {% if closed_market_orders %}
                     <table class="data-table">
                         <thead>
